# M06

./: pyproject.toml
src/m06/Atividade 3/: ATV_3.ipynb.ipynb
src/m06/Atividade_2/: ATV_2.ipynb
src/m06/Atividade_5/: ATV_5 1.ipynb
src/m06/Atividade_6/: ATV6.ipynb
src/m06/Atividade_7/: AT7 - Interpolação de Lagrange.ipynb
src/m06/Atividade_metodo_newton/: ATV_4.ipynb
src/m06/estatistica/: data2.csv  freq_absolute_points.sql  points_tmw.csv  tb_freq.ipynb
src/m06/estatistica/data/: tmw.db
